# -EDD-Proyecto_202206963

Fase 1/: CMakeLists.txt  ManualTecnico.md  Publicaiones.json  Solicitudes.json  Usuario.cpp  UsuarioA.cpp  main.cpp  usuarios.json
Fase 1/Estructuras/: CircularDoble.cpp  EnlazadaDoble.cpp  EnlazadaSimple.cpp  Matriz.cpp  Matriz.h  Pila.cpp  SimpleAmistad.cpp
Fase 1/Listas/: CircularDoble.cpp  EnlazadaDoble.cpp  EnlazadaSimple.cpp
Fase 1/headers/: Amistad.h  ModuloAdmin.cpp  ModuloAdmin.h  ModuloUsuario.cpp  ModuloUsuario.h  Nodo.h  NodoAmistad.h  NodoListas.h  NodoStories.h  NodoUser.h  Publicacion.h  Usuario.h  UsuarioA.h
Fase 2/: ManualTecnico.md  ManualUsuario.md
Fase 2/Estructuras/: ABBtree.cpp  ABBtree.h  AVLtree.cpp  AVLtree.h  ArbolB.cpp  ArbolB.h  Block.cpp  Block.h  BlockChain.cpp  BlockChain.h  CMakeLists.txt  Chain.cpp  Chain.h  Comentarios.cpp  Comentarios.h  ListaABB.cpp  ListaABB.h  ListaPosts.cpp  ListaPosts.h  ListaUsuarios.cpp  ListaUsuarios.h  NodoABB.cpp  NodoABB.h  NodoB.cpp  NodoB.h  NodoPosts.cpp  NodoPosts.h  PostSimple.cpp  PostSimple.h  TreePost.cpp  TreePost.h  TreeUsuario.cpp  TreeUsuario.h  sha.h
Fase 2/GUI/: CMakeLists.txt  crearusuario.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
Fase 3/Estructuras/: Block.cpp  Block.h  Grafo.cpp  Grafo.h  Huffman.cpp  Huffman.h  Merkle.cpp  Merkle.h  Nodo.cpp  Nodo.h  NodoH.cpp  NodoH.h  SuperVertice.cpp  SuperVertice.h  Vertice.cpp  Vertice.h
